--- a/docs/metrics.adoc
+++ b/docs/metrics.adoc
@@ -1,69 +1,85 @@
-== Integrate Prometheus into Flink cluster
+= Integrate Prometheus into Flink cluster
 
-After deploying Flink cluster, you can then deploy Prometheus to monitor
-the metrics from job manager and task manager by following these steps:
+NOTE: The following code blocks assume you are in the `+examples/metrics/+` directory.
 
-[arabic]
-. Update the Prometheus configuration with the IP address of Flink pods
+After deploying a Flink cluster, you can then deploy Prometheus to monitor
+metrics from the job manager and task manager by following these steps:
+
+. Update the provided Prometheus configuration with the IP address of Flink pods
 to scrape from:
 +
 *Linux:*
 +
-....
+[source,bash]
+----
 sed -i s/OPERATOR/$(kubectl get pods -lapp.kubernetes.io/name=flink-kubernetes-operator -n flink -o=jsonpath="{range .items[*]}{.status.podIP}{','}{end}" | cut -d ',' -f1)/g prometheus-install/prometheus-config.yaml
+
 sed -i s/JOB_MANAGER/$(kubectl get pods -lapp=recommendation-app -n flink -o=jsonpath="{range .items[*]}{.status.podIP}{','}{end}" | cut -d ',' -f1)/g prometheus-install/prometheus-config.yaml
+
 sed -i s/TASK_MANAGER/$(kubectl get pods -lapp=recommendation-app -n flink -o=jsonpath="{range .items[*]}{.status.podIP}{','}{end}" | cut -d ',' -f2)/g prometheus-install/prometheus-config.yaml
-....
+----
 +
 *MacOS*
 +
-....
+[source,bash]
+----
 sed -i '' s/JOB_MANAGER/$(kubectl get pods -lapp.kubernetes.io/name=flink-kubernetes-operator -n flink -o=jsonpath="{range .items[*]}{.status.podIP}{','}{end}" | cut -d ',' -f1)/g prometheus-install/prometheus-config.yaml
+
 sed -i '' s/JOB_MANAGER/$(kubectl get pods -lapp=recommendation-app -n flink -o=jsonpath="{range .items[*]}{.status.podIP}{','}{end}" | cut -d ',' -f1)/g prometheus-install/prometheus-config.yaml
+
 sed -i '' s/TASK_MANAGER/$(kubectl get pods -lapp=recommendation-app -n flink -o=jsonpath="{range .items[*]}{.status.podIP}{','}{end}" | cut -d ',' -f2)/g prometheus-install/prometheus-config.yaml
-....
+----
 +
-Note: Here we assume there’s only 1 flink kubernetes operator, 1 job
+NOTE: Here we assume there’s only 1 Flink kubernetes operator, 1 job
 manager, and 1 task manager. If you deployed more than that, please
 update the `+prometheus-config.yaml+` file.
-. Install prometheus, configuration, and service:
+. Install the provided Prometheus server, configuration, and service CRs:
 +
-....
+[source,bash]
+----
 kubectl apply -f prometheus-install -n flink
-....
-. Expose the prometheus UI with port-forward rule:
+----
+. Expose the Prometheus UI with a port-forward rule:
 +
-....
+[source,bash]
+----
 kubectl port-forward svc/prometheus-service -n flink 9090
-....
-. Now you can monitor the metrics in flink kubernetes operator, job
-manager or task manager via the Prometheus UI is accessible at
-localhost:9090. image:images/operator_metric.png[img.png]
+----
+. Now, you can monitor the metrics in the Flink kubernetes operator, job
+manager, or task manager via the Prometheus UI accessible at
+`+localhost:9090+`.
++
+image:images/operator_metric.png[img.png]
++
 image:images/job_metric.png[img.png]
++
 image:images/task_metric.png[img.png]
 
 == Integrate Prometheus into Flink cluster deployed on OpenShift
 
-Since Openshift already has a built-in Prometheus installed and
-configured, we can integrate with it by deploying a `+PodMonitor+` CR
-for the flink cluster:
+Since OpenShift comes with Prometheus built-in and pre-configured,
+we can integrate with it by deploying a `+PodMonitor+` CR
+for the Flink cluster:
 
-[arabic]
 . Install the pre-configured `+PodMonitor+`, `+service+`, and
 `+serviceMonitor+` CRs:
 +
-....
+[source,bash]
+----
 oc apply -f prometheus-install/openshift_monitor_example -n flink
-....
+----
 +
-Note: These CRs are configured to select the Flink kubernetes operator,
+Note: These CRs are pre-configured to select the Flink kubernetes operator
 and `+FlinkDeployment+` created as part of the `+recommendation-app+`
 example. Please update the `+selector.matchLabels+` field in
 `+flink-monitor.yaml+` if you are running a different example.
-. It takes around 5 minutes to wait for prometheus operator to update
-the config for prometheus server. After that, you can query the metrics
+. It takes around 5 minutes for the Prometheus operator to update
+the config for the Prometheus server. After that, you can query the metrics
 in the OpenShift UI as described
 https://docs.openshift.com/container-platform/4.16/observability/monitoring/managing-metrics.html#querying-metrics-for-all-projects-as-an-administrator_managing-metrics[here].
++
 image:images/openshift_operator.png[img.png]
++
 image:images/openshift_jobmanager.png[img.png]
++
 image:images/openshift_taskmanager.png[img.png]
